--- a/admin/index.html
+++ b/admin/index.html
@@ -1,73 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
-    <title>AutodiffLabs CMS</title>
-
-    <!-- TailwindCSS config (matches home page) -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              sunflower: {
-                400: '#FBBF24',
-                500: '#F59E0B', // Main accent
-                600: '#D97706',
-              }
-            },
-            fontFamily: {
-              sans: ['system-ui', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', 'sans-serif'],
-            }
-          }
-        }
-      }
-    </script>
-
-    <!-- Minimal scrollbar styling -->
-    <style>
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #f1f1f1; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #ccc; 
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #aaa; 
-      }
-      html {
-        scroll-behavior: smooth;
-      }
-      body {
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        background-color: white;
-        color: #111827;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      }
-    </style>
-
-    <!-- Decap CMS -->
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-
-    <!-- Optional: Custom CSS if any -->
-    <link rel="stylesheet" href="/index.css">
+    <title>AutodiffLabs | Admin</title>
   </head>
-
-  <body class="selection:bg-sunflower-500 selection:text-white">
-    <div id="root"></div>
-    <!-- You can add a wrapper for CMS UI if needed -->
-    <div class="w-full min-h-screen flex justify-center items-start p-4">
-      <div class="w-full max-w-5xl">
-        <!-- Decap CMS will mount here -->
-      </div>
-    </div>
+  <body>
+    <!-- Include the script that builds the page and powers Decap CMS -->
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </body>
 </html>
