Documentation service added - corrected

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -32,7 +32,7 @@
         }
       }
     </script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/documentation/index.css">
 <script type="importmap">
 {
   "imports": {
@@ -43,7 +43,7 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="/documentation/index.css">
 </head>
 <body class="bg-gray-50 text-gray-900 antialiased selection:bg-sunflower-100 selection:text-sunflower-900">
     
@@ -116,8 +116,8 @@
         </main>
     </div>
 
-    <script type="module" src="index.js"></script>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/documentation/index.js"></script>
+    
     <!-- Footer -->
     <footer class="bg-white border-t border-gray-200 py-10 mt-20">
       <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
