--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   }
 }
 </script>
-  <script type="module" crossorigin src="/assets/main-iSD7Uph_.js"></script>
+  <script type="module" crossorigin src="/assets/main-UXVmIOYl.js"></script>
 </head>
   <body class="bg-white text-gray-900 selection:bg-sunflower-500 selection:text-white">
     <div id="root"></div>
