--- a/documentation/index.html
+++ b/documentation/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AutodiffLabs Docs</title>
+    <title>NeuralGraphLabs Docs</title>
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <script>
@@ -53,7 +53,7 @@
             <!-- Logo -->
             <a href="#/" class="text-xl tracking-tighter font-normal flex items-center gap-2 group">
                 <div class="w-3 h-3 bg-sunflower-500 rounded-full group-hover:scale-125 transition-transform duration-300"></div>
-                <span class="text-gray-900">Autodiff<span class="text-gray-400">Labs</span></span>
+                <span class="text-gray-900"><span class="text-gray-400">Labs</span></span>
             </a>
 
             <!-- Desktop Menu -->
@@ -126,7 +126,7 @@
         <div class="flex items-center gap-2">
           <div class="w-2 h-2 bg-green-500 rounded-full"></div>
           <img
-            src="https://raw.githubusercontent.com/AutodiffLabs/autodifflabs.github.io/main/adl.png"
+            src="https://raw.githubusercontent.com/NeuralGraphLabs/neuralgraphlabs.github.io/refs/heads/main/ngl.png"
             width="70"
             height="70"
             alt="ADL Logo"
@@ -145,7 +145,7 @@
 
         <!-- Copyright -->
         <p class="text-xs text-gray-400">
-          © <span id="year"></span> AutodiffLabs.
+          © <span id="year"></span> NeuralGraphLabs.
         </p>
 
       </div>
