--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AutodiffLabs</title>
+    <title>NeuralGraphLabs</title>
 
     <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/AutodiffLabs/autodifflabs.github.io/refs/heads/main/adl.png">
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/NeuralGraphLabs/neuralgraphlabs.github.io/refs/heads/main/ngl.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -61,7 +61,7 @@
   }
 }
 </script>
-  <script type="module" crossorigin src="/assets/main-RP6zwqMW.js"></script>
+  <script type="module" crossorigin src="/assets/main-BeHfPGCD.js"></script>
 </head>
   <body class="bg-white text-gray-900 selection:bg-sunflower-500 selection:text-white">
     <div id="root"></div>
